--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -10,6 +10,10 @@ sites:
     icon: https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Visual_Studio_Code_1.35_icon.svg/240px-Visual_Studio_Code_1.35_icon.svg.png
   - name: Reverse Proxy
     url: https://proxy.macbrayne.de?$SECRET
+    icon: https://raw.githubusercontent.com/jlesage/docker-templates/master/jlesage/images/nginx-proxy-manager-icon.png
+  - name: Image Hosting
+    url: https://i.macbrayne.de?$SECRET
+    icon: https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/xbackbone-logo.png
   - name: FRACTAVA Website
     url: https://fractava.com
     icon: https://raw.githubusercontent.com/fractava/resources/master/Logos/Symbol/gro%C3%9F/transparenter%20Hintergrund/Farbe%20weiß.png
